# ProtoTiamat

./: .envrc  .gitignore  Cargo.toml  Containerfile  Containerfile.leptos  README.md  devenv.nix  flake.nix  run.nu  rust-toolchain.toml  simulation.yaml  span.json  treefmt.toml
Containers/: elastic-search.template.yml  elastic-search.yml
abilitee/: Cargo.toml
abilitee/src/: errors.rs  lib.rs
abilitee/src/app/: mod.rs
abilitee/src/app/components/: help_boxes.rs  login_box.rs  mod.rs  topbar.rs
abilitee/src/app/components/post/: mod.rs  new_post.rs
abilitee/src/app/generic_components/: control_stack.rs
abilitee/src/app/guards/: mod.rs  resource_guard.rs  session_guard.rs
abilitee/src/server_functions/: mod.rs  session.rs
abilitee/src/structs/: mod.rs  public_url.rs  server_only.rs
communitee/: Cargo.toml
communitee/src/: errors.rs  lib.rs  main.rs
communitee/src/app/: app_entry.rs  mod.rs
communitee/src/app/components/: ad_columns.rs  container_columns.rs  feed.rs  footbar.rs  login_box.rs  main_column.rs  mod.rs  new_post.rs  post.rs  topbar.rs
communitee/src/app/components/access_bar/: mod.rs  user_settings.rs
communitee/src/app/components/generics/: error_box.rs  labelled_input.rs  mod.rs
communitee/src/app/components/post/: mod.rs  new_post.rs
communitee/src/app/generic_components/: button.rs  control_stack.rs  inert_containers.rs  labelled_input.rs  mod.rs
communitee/src/app/guards/: mod.rs  resource_guard.rs  session_guard.rs  user_guard.rs
communitee/src/app/pages/: friends.rs  friendslist.rs  group.rs  groups.rs  groupslist.rs  help.rs  home_page.rs  login.rs  messages.rs  mod.rs  register.rs  settings.rs  user.rs
communitee/src/app/pages/group/: mod.rs
communitee/src/server/: mod.rs
communitee/src/server_functions/: group.rs  mod.rs  user.rs
communitee/src/session/: mod.rs  session_store.rs
communitee/src/structs/: mod.rs  public_url.rs  session_store.rs
communitee/src/structs/data/: mod.rs
communitee/src/structs/libertee/: feed.rs  group.rs  mod.rs  post.rs  server.rs  session.rs  store.rs  user.rs
communitee/src/telemetry/: mod.rs  otel_tracer.rs
communitee/style/: access-bar.scss  foot-bar.scss  home-page.scss  output.scss  post.scss  top-bar.scss
data/: data.db-wal
docs/: Issues.md  devlog.md
es/: user-template.es
facilitee/: Cargo.toml
facilitee/src/: errors.rs  lib.rs
facilitee/src/app/: app_entry.rs  mod.rs
facilitee/src/app/components/: feed.rs  mod.rs  topbar.rs
facilitee/src/app/components/post/: new_post.rs
facilitee/src/app/generic_components/: button.rs  labelled_input.rs  mod.rs
facilitee/src/app/guards/: mod.rs  resource_guard.rs  session_guard.rs
facilitee/src/app/pages/: favourites.rs  friendslist.rs  groupslist.rs  help.rs  home_page.rs  login.rs  messages.rs  mod.rs  register.rs  settings.rs  user.rs
facilitee/src/app/pages/group/: mod.rs
facilitee/src/server_functions/: mod.rs  session.rs
facilitee/src/structs/: mod.rs  public_url.rs
libertee/: Cargo.toml
libertee/src/: errors.rs  feed.rs  group.rs  lib.rs  message.rs  post.rs  server.rs  session.rs  store.rs  user.rs
libertee/src/group/: history.rs  member.rs  mod.rs  policy.rs
libertee/src/telemetry/: mod.rs
libertee/src/traits/: admin_interface.rs  client_interfaces.rs  mod.rs
postgres/: create_database.sql  postgres-dev.yml  postgres.json  postgres.yaml
scripts/: all-in-one.yaml  init_elastic.nu  jaeger.nu  postgres.nu  run.nu
virtualitee/: Cargo.toml
virtualitee/src/: interface.rs  main.rs  server.rs
virtualitee/src/server/: client_interface.rs  group.rs  mod.rs  server.rs  user.rs
