[package]
name = "abilitee"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
actix-identity = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
cfg-if.workspace = true
chrono = { workspace = true, optional = false }
clap = { workspace = true, optional = true }
leptos.workspace = true
leptos_actix = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
libertee.workspace = true
miette.workspace = true
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = false }
strum = { workspace = true, optional = false }
thiserror = { workspace = true, optional = false }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = false }
url.workspace = true
wasm-bindgen = { workspace = true, optional = true }

[features]
hydrate = [
  "dep:wasm-bindgen",
  "leptos/hydrate",
  "leptos/tracing",
  "leptos/trace-component-props",
  "libertee/hydrate"
]
ssr = [
  "leptos/ssr",
  "leptos/tracing",
  "leptos/trace-component-props",
  "leptos_meta/ssr",
  "leptos-use/ssr",
  "libertee/ssr",
  "miette/fancy",
  "tokio/rt-multi-thread",
  "tokio/signal",
  "dep:clap",
  "dep:anyhow",
  "dep:actix-identity",
  "dep:actix-web",
  "dep:leptos_actix",
  "dep:reqwest",
  "dep:tokio"
]