[package]
name = "libertee"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if.workspace = true
chrono = { workspace = true, optional = false }
clap = { workspace = true, optional = true }
console_error_panic_hook.workspace = true
elastic.workspace = true
miette.workspace = true
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = false }
strum = { workspace = true, optional = false }
thiserror = { workspace = true, optional = false }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = false }
tracing-subscriber.workspace = true
url.workspace = true
uuid = { workspace = true, optional = true }

[features]
hydrate = []
ssr = [
  "miette/fancy",
  "dep:uuid",
  "dep:rand",
  "dep:clap",
]



