[package]
name = "virtualitee"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env", "cargo", "string"] }
libertee.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
